# l0approximator-python

./: .segn.py.swp  README.md  pyproject.toml  segn.py  setup.cfg
l0approximator/: __init__.py  util.py
l0approximator/functions/: __init__.py  squarederror.py
l0approximator/l0approximator.egg-info/: PKG-INFO  SOURCES.txt
