[metadata]
name = l0approximator
version = 0.0.1
author = Ali Tugrul Balci
author_email = alitugrulbalci@gmail.com
description = Approximate 1-d signal with L0 penalization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boooooogey/l0approximator-python
project_urls =
    Bug Tracker = https://github.com/boooooogey/l0approximator-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = l0approximator
packages = find:
python_requires = >=3.6

[options.packages.find]
where = l0approximator
